Added layout and animation

--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,13 @@
     <title>Яндекс Дом</title>
     <meta name="description" content="">
     @@include('_include/page-head.html')
-    <script type="text/javascript" src="media/events.json"></script>
   </head>
   <body>
     <div class="page__inner">
       <div class="page__content">
         @@include('_include/header.html')
         <main role="main">
-
+          @@include('_include/media-page.html')
         </main>
       </div>
       <div class="page__footer">
