--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,9 @@
           <div class="container">
             <div class="section">
               <h1 class="section__title">Лента событий</h1>
-              <div class="grid"></div>
+              <!-- <div class="grid"></div> -->
+              <button id="testButton"> Кнопка </button>
+              <div class="test1">_</div>
             </div>
           </div>
 
