Added toggle tabs

--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,12 @@
             <div class="section">
               <h1 class="section__title">Лента событий</h1>
               <!-- <div class="grid"></div> -->
-              <button id="testButton"> Кнопка </button>
-              <div class="test1">_</div>
+              <div class="nav__content">
+                <div class="nav__content-item" data-tab="event">События</div>
+                <div class="nav__content-item" data-tab="common">Сводка</div>
+                <div class="nav__content-item" data-tab="devices">Устройства</div>
+                <div class="nav__content-item" data-tab="scripts">Сценарии</div>
+              </nav>
             </div>
           </div>
 
